--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -1256,12 +1256,6 @@ input[type='submit'] {
   padding: 0 20px 0;
 }
 
-@media (max-width: 767px) {
-  .addPropertyFormContainer .attactment-block, .addPropertyFormContainer .basics-block, .addPropertyFormContainer .feature-block, .addPropertyFormContainer .contact-information {
-    padding: 75px 10px 0;
-  }
-}
-
 .addPropertyFormContainer .errors {
   overflow: hidden;
   display: none;
@@ -1334,15 +1328,24 @@ input[type='submit'] {
   content: '';
 }
 
+@media (max-width: 767px) {
+  .addPropertyFormContainer .listing-holder:after {
+    display: none;
+  }
+}
+
 .addPropertyFormContainer .listing-holder .listing-opener {
   text-align: center;
   text-decoration: none;
   color: #000;
-  font-size: 40px;
-  line-height: 36px;
+  font-size: 35px;
+  line-height: 35px;
   cursor: pointer;
   z-index: 5;
   display: block;
+  background: #dde2e8;
+  padding: 0 5px;
+  float: right;
 }
 
 @media (min-width: 768px) {
@@ -1405,7 +1408,7 @@ input[type='submit'] {
 @media (max-width: 767px) {
   .addPropertyFormContainer .section-listing {
     position: absolute;
-    top: 100%;
+    top: 0;
     left: -10px;
     right: -10px;
     z-index: -1;
@@ -2166,6 +2169,34 @@ input[type='submit'] {
   -ms-transition: color 0.4s ease, background 0.4s ease;
 }
 
+@media (max-width: 1599px) {
+  .addPropertyFormContainer .property-add .feature-blockOpener {
+    margin: 0 26px 0 auto;
+  }
+}
+
+@media (max-width: 1199px) {
+  .addPropertyFormContainer .property-add .feature-blockOpener {
+    margin: 0 13px 0 auto;
+  }
+}
+
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .property-add .feature-blockOpener {
+    margin: 0 17px 0 auto;
+    font-size: 12px;
+    line-height: 15px;
+    width: 195px;
+  }
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .property-add .feature-blockOpener {
+    width: 100%;
+    margin: 0;
+  }
+}
+
 .addPropertyFormContainer .property-add .feature-blockOpener.active, .addPropertyFormContainer .property-add .feature-blockOpener:hover {
   background: #608ce8;
   color: #fff;
@@ -2367,7 +2398,7 @@ input[type='submit'] {
 @media (max-width: 1023px) {
   .addPropertyFormContainer .image-uploading-area {
     max-width: 480px;
-    margin: 30px auto 0;
+    margin: 10px auto;
   }
 }
 
@@ -2377,16 +2408,16 @@ input[type='submit'] {
   padding: 0 10px 10px;
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 1199px) {
   .addPropertyFormContainer .image-uploading-area li {
-    width: 33.33%;
-    padding: 10px 5px;
+    padding: 0 5px 10px;
   }
 }
 
 @media (max-width: 1023px) {
   .addPropertyFormContainer .image-uploading-area li {
-    width: 50%;
+    width: 33.33%;
+    padding: 0 5px 10px;
   }
 }
 
@@ -2434,27 +2465,6 @@ input[type='submit'] {
   position: relative;
   z-index: 1;
   overflow: hidden;
-}
-
-@media (max-width: 1424px) {
-  .addPropertyFormContainer .image-uploading-area li .file-uploader {
-    width: 100%;
-    height: 150px;
-  }
-}
-
-@media (max-width: 1199px) {
-  .addPropertyFormContainer .image-uploading-area li .file-uploader {
-    width: 100%;
-    height: 110px;
-  }
-}
-
-@media (max-width: 1023px) {
-  .addPropertyFormContainer .image-uploading-area li .file-uploader {
-    width: 100%;
-    height: 180px;
-  }
 }
 
 @media (max-width: 767px) {
