--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -47,7 +47,7 @@ $media-expressions: (
 @import 'list-agency-user';
 @import 'property-listing';
 @import 'user-registeration';
-
+@import 'fancybox';
 html {
 	width: 100%;
 	height: 100%;
