--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -48,6 +48,12 @@ $media-expressions: (
 @import 'property-listing';
 @import 'user-registeration';
 @import 'fancybox';
+.lightbox {
+	padding: 10px;
+	width: 100%;
+	max-width: 500px;
+	display: none;
+}
 html {
 	width: 100%;
 	height: 100%;
