--- a/markup/includes/property-listing.html
+++ b/markup/includes/property-listing.html
@@ -125,10 +125,11 @@
                         <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                         <div class="popup-holder">
                             <div class="lightbox alert-modal" id="Alert">
-                                <p>Are you sure you want to delete this property?</p>
+                                <span class="caution-heading"><span class="icon-warning"></span>Warning</span>
+                                <p>Are you sure, you want to delete this property?</p>
                                 <ul class="links">
-                                    <li><a href="#">Delete this property</a></li>
-                                    <li><a href="#">cancle</a></li>
+                                    <li><a href="#"><span class="icon-trash"></span>Delete this property</a></li>
+                                    <li><a href="#" class="close">cancle</a></li>
                                 </ul>
                             </div>
                         </div>
