--- a/markup/scss/_fancybox.scss
+++ b/markup/scss/_fancybox.scss
@@ -26,7 +26,6 @@
 
 .fancybox-skin {
 	position: relative;
-	background: #f9f9f9;
 	color: #444;
 	text-shadow: none;
 	-webkit-border-radius: 4px;
@@ -38,14 +37,9 @@
 	z-index: 8030;
 }
 
-.fancybox-opened .fancybox-skin {
-	-webkit-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-	   -moz-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-}
-
 .fancybox-outer, .fancybox-inner {
 	position: relative;
+	background: $white;
 }
 
 .fancybox-inner {
@@ -99,12 +93,13 @@
 
 .fancybox-close {
 	position: absolute;
-	top: -18px;
-	right: -18px;
+	top: -5px;
+	right: -5px;
 	width: 36px;
 	height: 36px;
 	cursor: pointer;
 	z-index: 8040;
+	display: none;
 }
 
 .fancybox-nav {
@@ -184,7 +179,7 @@
 	left: 0;
 	overflow: hidden;
 	display: none;
-	z-index: 8010;
+	z-index: 9999;
 	background: url('../images/fancybox/fancybox_overlay.png');
 }
 
