--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -49,9 +49,11 @@ $media-expressions: (
 @import 'user-registeration';
 @import 'fancybox';
 .lightbox {
-	padding: 10px;
 	width: 100%;
 	max-width: 500px;
+	display: none;
+}
+.fancybox-title-float-wrap .child{
 	display: none;
 }
 html {
@@ -1232,12 +1234,82 @@ a{ outline: none;}
 		}
 	}
 }
+
 .accordion{
 	.slide {
 		display: none !important;
 		
 		&.slide-active {
 			display: block !important;
+		}
+	}
+}
+.alert-modal {
+	width: 100%;
+
+	.caution-heading {
+		background: $red;
+		color: $white;
+		position: relative;
+		@include font(18,21);
+		display: block;
+		padding: 10px 10px 10px 40px;
+		margin: 0 0 10px;
+
+		span[class^="icon-"],span[class*="icon-"]{
+			position: absolute;
+			top: 50%;
+			left: 10px;
+			@include font(22,22);
+			margin: -11px 0 0;
+		}
+
+	}
+	p{
+		display: block;
+		padding: 0 10px;
+	}
+	.links {
+		@extend %listreset;
+		@include align-reset(top,16,19);
+		text-transform: capitalize;
+
+		li{
+			width: 25%;
+			padding: 0 10px 10px;
+
+			&:first-child{
+				width: 75%;
+
+				a{
+					background: darken($red, 5%);
+					color: $white;
+					border-color: darken($red, 5%);
+
+					&:hover {
+						background: darken($red, 6%);
+					}
+				}
+			}
+			
+			a{
+				display: block;
+				text-align: center;
+				text-decoration: none;
+				padding: 7px 10px;
+				position: relative;
+				color: $mix-grays;
+				border: 1px solid $mix-grays;
+				border-radius: 2px;
+
+				span[class^="icon-"],span[class*="icon-"]{
+					position: absolute;
+					top: 50%;
+					left: 10px;
+					@include font(16,16);
+					margin: -8px 0 0;
+				}
+			}
 		}
 	}
 }
