--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -875,6 +875,10 @@ select {
   padding: 0.4em 0.7em;
   font-size: 14px;
   line-height: 18px;
+  background: transparent;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -ms-appearance: none;
 }
 
 input[type=number]::-webkit-outer-spin-button,
@@ -1130,13 +1134,13 @@ input[type='submit'] {
 
 @media (max-width: 1023px) {
   .sideBar-active .addPropertyFormContainer {
-    padding: 0 10px 0 245px;
+    padding: 10px 10px 0 245px;
   }
 }
 
 @media (max-width: 767px) {
   .sideBar-active .addPropertyFormContainer {
-    padding: 0;
+    padding: 10px 0 0;
   }
 }
 
@@ -1482,10 +1486,20 @@ input[type='submit'] {
   line-height: 15px;
   width: 100%;
   height: 30px;
-  max-width: 260px;
+  max-width: 235px;
   margin: 0 0 0 10px;
   padding: 6px 10px;
   outline: none;
+}
+
+@media (max-width: 1599px) {
+  .addPropertyFormContainer .property-add select,
+  .addPropertyFormContainer .property-add input[type="text"],
+  .addPropertyFormContainer .property-add input[type="search"],
+  .addPropertyFormContainer .property-add input[type="number"],
+  .addPropertyFormContainer .property-add input[type="email"] {
+    max-width: 225px;
+  }
 }
 
 @media (max-width: 1199px) {
@@ -1605,9 +1619,15 @@ input[type='submit'] {
   margin: 0 0 0 9px;
   width: 100%;
   height: 120px;
-  max-width: 710px;
+  max-width: 680px;
   resize: none;
   padding: 10px;
+}
+
+@media (max-width: 1599px) {
+  .addPropertyFormContainer .property-add textarea {
+    max-width: 650px;
+  }
 }
 
 @media (max-width: 1199px) {
@@ -1763,9 +1783,10 @@ input[type='submit'] {
 .addPropertyFormContainer .property-add .radio-holder li label.withCheck .fake-label {
   display: inline-block;
   vertical-align: top;
-  margin: 0 0 0 -5px;
   border: 0;
-  padding: 2px 0 0;
+  padding: 2px 5px 0;
+  max-width: 150px;
+  text-align: left;
 }
 
 .addPropertyFormContainer .property-add .radio-holder li label.withCheck .fake-label:hover {
@@ -1874,6 +1895,12 @@ input[type='submit'] {
   clear: both;
 }
 
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .property-add .layout.add {
+    max-width: 469px;
+  }
+}
+
 @media (max-width: 767px) {
   .addPropertyFormContainer .property-add .layout.add {
     max-width: inherit;
@@ -1938,11 +1965,17 @@ input[type='submit'] {
 }
 
 .addPropertyFormContainer .property-add .layout-holder .title {
-  max-width: 125px;
+  max-width: 185px;
   width: inherit;
   float: none;
   display: inline-block;
   vertical-align: top;
+}
+
+@media (max-width: 1199px) {
+  .addPropertyFormContainer .property-add .layout-holder .title {
+    max-width: 120px;
+  }
 }
 
 @media (max-width: 1023px) {
@@ -1962,7 +1995,7 @@ input[type='submit'] {
   text-align: center;
   cursor: pointer;
   display: block;
-  margin: 0 43px 0 auto;
+  margin: 0;
   color: #000;
   border: 1px solid #58a36f;
   color: #58a36f;
@@ -1977,15 +2010,9 @@ input[type='submit'] {
   -ms-transition: color 0.4s ease, background 0.4s ease;
 }
 
-@media (max-width: 1599px) {
-  .addPropertyFormContainer .property-add .feature-blockOpener {
-    margin: 0 26px 0 auto;
-  }
-}
-
 @media (max-width: 1199px) {
   .addPropertyFormContainer .property-add .feature-blockOpener {
-    margin: 0 13px 0 auto;
+    margin: 0 18px 0 auto;
   }
 }
 
@@ -2043,8 +2070,8 @@ input[type='submit'] {
 
 .addPropertyFormContainer .form-heading span:after {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -1px;
+  right: -1px;
   border: 32px solid transparent;
   border-top: 32px solid #fff;
   border-right: 0;
