--- a/markup/scss/base/_forms.scss
+++ b/markup/scss/base/_forms.scss
@@ -36,6 +36,10 @@ select{
   outline: none !important;
   padding: $form-element-padding;
   @include font(14,18);
+  background: transparent;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -ms-appearance: none;
 }
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
